# rhinometric-overview

./: .env  .env.alertmanager.template  .env.example  .env.license  .env.production  .gitignore  .ssh_temp_key  ACCESO_SERVICIOS.md  ACCION_INMEDIATA.md  ADMIN_QUICK_GUIDE.md  ALERTMANAGER_FIX_RESUMEN.md  ALERT_ACCUMULATION_FIX.md  ALERT_ACTIONS_DESIGN.md  ANALISIS_COMPLETO_v2.2.0.md  ANALISIS_DASHBOARDS.md  ANALISIS_GAP_v2.2.0.md  ANALISIS_PLATAFORMA_RHINOMETRIC.md  API_CONNECTOR_TEST_COMMANDS.md  API_CONNECTOR_TEST_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_ES.md  AUDITORIA_DISENO_PLAN_RHINOMETRIC_v2.5.0.html  AUDITORIA_DISENO_PLAN_RHINOMETRIC_v2.5.0.md  AUDITORIA_MIGRACION_GRAFANA.md  AUDITORIA_TECNICA_RHINOMETRIC_v2.0.0.md  BACKLOG_RHINOMETRIC_FACTUAL.html  BACKLOG_RHINOMETRIC_FACTUAL.md  BRANDING-IMPLEMENTATION-SUMMARY.md  BRANDING_RHINOMETRIC.md  BUG_FIX_REPORT_V254.md  CAPACITY_ANALYSIS_RHINOMETRIC_REAL.md  CHANGELOG-v2.1.md  CHANGELOG-v2.6.0.md  CHANGELOG.md  CHANGELOG_V253_ADDITION.md  CHECKLIST_FINAL_COMERCIALIZACION.md  CHECKLIST_FINAL_v2.1.0.md  CLOSURE_DELIVERABLES.md  CLOSURE_SUMMARY.txt  CLOUDFLARE_SETUP.md  (+425 more)
anomaly-engine/: Cargo.toml  Dockerfile  anomaly-update.tar  check_columns.sql  check_tables.sql  fix_index.sql
anomaly-engine/config/: anomaly_v1.yaml
anomaly-engine/migrations/: 001_create_tables.sql  002_extend_results_v1.sql
anomaly-engine/python/: internal_snapshots_v1.py  patch_main.py
anomaly-engine/src/: config.rs  main.rs  server.rs  threshold.rs  worker.rs
anomaly-engine/src/api/: alert_context.rs  anomalies.rs  health.rs  metrics.rs  mod.rs  validation.rs
anomaly-engine/src/client/: backend.rs
anomaly-engine/src/llm/: mod.rs
anomaly-engine/src/models/: anomaly.rs  reason_code.rs  severity.rs  snapshot.rs
anomaly-engine/src/persistence/: repository.rs
rust-licenses/: .gitignore  Cargo.toml
rust-licenses/src/: fingerprint.rs  license.rs  main.rs
(+1552 files in other folders)
